[tool.poetry]
name = "pypress"
version = "0.2.1"
description = ""
authors = ["Richard <smithr.programming@gmail.com>"]
readme = "README.md"
packages = [
    { include = "pypress", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^13.7.1"
typer = "^0.12.3"
setuptools = "^70.0.0"
pdflib-extended = "^2024.6.4"
polars = "^0.20.31"
qrcode = "^8.0"

[tool.poetry.dev-dependencies]
black = "^24.4.2"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pypress = "pypress.__main__:app"