[tool.poetry]
name = "pypress"
version = "0.2.2"
description = ""
authors = ["Richard <smithr.programming@gmail.com>"]
readme = "README.md"
packages = [
    { include = "pypress", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^13.7.1"
typer = "^0.12.3"
setuptools = "^70.0.0"
pdflib-extended = ">=2025.3.14"
polars = "^0.20.31"
qrcode = "^8.0"
python-barcode = "^0.15.1"

[tool.poetry.dev-dependencies]
black = "^24.4.2"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pypress = "pypress.__main__:app"